--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:regular,500,600,700,800&amp;display=swap" rel="stylesheet">
     <title>React App</title>
   </head>
 
